<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color3"
    tools:context=".EnterAddress">

    <Spinner
        android:id="@+id/spinnerEA"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/btn_dropdown"
        android:defaultFocusHighlightEnabled="true"
        android:forceDarkAllowed="false"
        android:spinnerMode="dropdown"
        android:tag="Menu:"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="84dp"
        android:text="@string/what_is_your_current_address"
        android:textAlignment="center"
        android:textColor="@color/color4"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.132" />

    <EditText
        android:id="@+id/AddressInput"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:ems="15"
        android:hint="@string/address"
        android:importantForAutofill="no"
        android:inputType="textPostalAddress"
        android:minHeight="48dp"
        android:textColor="@color/color5"
        android:textColorHint="@color/color5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.292" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:text="@string/dont_worry_we_will_not_share_this_info_with_anyone_else"
        android:textAlignment="center"
        android:textColor="@color/color4"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <Button
        android:id="@+id/button2"
        android:layout_width="310dp"
        android:layout_height="55dp"
        android:background="@color/color2"
        android:onClick="sendMessage2"
        android:text="@string/next"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_primary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.423" />

</androidx.constraintlayout.widget.ConstraintLayout>